# v-lang

./: .coverage  .gitignore  01_addition  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  ROADMAP.md  SECURITY.md  ast.py  booleans  codegen.py  coverage.xml  factorial  fibonacci_loop  fibonacci_recursive  gcd  hello  hello_bin  lexer.py  lexer.py.bk  main.py  mkdocs.yml  parser.py  production_roadmap.md  pyproject.toml  selection_sort  test.sh  text.van
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_keyword.md
algo/: celsius_to_fahrenheit.vpl  factorial.vpl  fibonacci.vpl  fibonacci_loop.vpl  fibonacci_recursive.vpl  gcd.vpl  selection_sort.vpl  sum_1_to_10.vpl  trap_area.vpl
docs/: index.md
docs/explanation/: architecture.md  design.md
docs/guides/: cli.md  vscode-setup.md
docs/reference/: keywords.md  operators.md  stdlib.md  syntax.md
docs/tutorials/: conditionals.md  functions.md  hello-world.md  loops.md  variables.md
examples/: README.md  arithmetic.vpl  booleans.vpl  hello.van
leetcode/: 001-two-sum.vpl  009-palindrome-number.vpl  011-container-with-most-water.vpl  026-remove-duplicates.vpl  027-remove-element.vpl  035-search-insert-position.vpl  053-maximum-subarray.vpl  066-plus-one.vpl  070-climbing-stairs.vpl  088-merge-sorted-array.vpl  119-pascals-triangle-ii.vpl  121-best-time-to-buy-and-sell-stock.vpl  122-best-time-to-buy-and-sell-stock-ii.vpl  167-two-sum-ii.vpl  169-majority-element.vpl  189-rotate-array.vpl  217-contains-duplicate.vpl  268-missing-number.vpl  283-move-zeroes.vpl  509-fibonacci-number.vpl  README.md
scripts/: build.sh  next_task_prompt.py
src/vlang/: __init__.py  cli.py  codegen.py  lexer.py  nodes.py  parser.py  visitor.py
tests/: README.md  conftest.py  test_cli.py  test_lexer.py
tests/conformance/: test_conformance.py
tests/conformance/programs/arithmetic/: 01_addition.vpl  02_subtraction.vpl  03_multiplication.vpl  04_division.vpl  05_precedence.vpl  06_parentheses.vpl  07_chained.vpl  08_selection_sort.expected  08_selection_sort.vpl  09_modulo.vpl
tests/conformance/programs/booleans/: 01_bool_branches.vpl
tests/fuzz/: fuzz_lexer.py
tests/integration/: test_compile.py
tests/unit/: test_booleans.py  test_codegen.py  test_conditionals_functions.py  test_lexer.py  test_nodes.py  test_parser.py  test_variables_loops.py
