[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vlang"
version = "0.1.0"
description = "Vietnamese programming language compiler (hobby project)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rply",
    "llvmlite",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
]

[project.scripts]
vlang = "vlang.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
